Changelog
=========

1.0a6 (unreleased)
------------------

- Nothing changed yet.


1.0a5 (2013-07-03)
------------------

* Backwards compatibility for jQuery < 1.7


1.0a4 (2013-07-01)
------------------

* Adjusted javascript initialization to work with the new component selection functionality
  introduced in raptus.article.core 2.0b13
* Added responsive option
* Added touch support
* Added items option to allow for multiple items per slide


1.0a3 (2012-09-12)
------------------

* New option to use a numeric and arrowed navigation


1.0a2 (2011-09-15)
------------------

* Fixed overflow issue in IE <= 7


1.0a1 (2011-09-06)
------------------

* Initial release